bug fix: broken layout as scrolling on Chrome

--- a/app/assets/stylesheets/enrolment.css.scss
+++ b/app/assets/stylesheets/enrolment.css.scss
@@ -65,6 +65,9 @@
         line-height: 30px;
         margin-bottom: 0px;
         padding-top: 0px;
+        span {
+          float: left;
+        }
       }
       input {
         width: 15px;
